sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/RESSMO_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>RESSMO Mapping</label>
    <pluralLabel>RESSMO Mappings</pluralLabel>
</CustomObject>