sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Add_to_Request__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether to add the field in the payload</description>
    <label>Add to Request</label>
    <type>Checkbox</type>
</CustomField>