sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Add_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this field should be send when a Quote has already been sent to SSMO</description>
    <label>Add to Update</label>
    <type>Checkbox</type>
</CustomField>