sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/API_Property__c.field-meta.xml
<CustomField>
    <fullName>API_Property__c</fullName>
    <description>JSON attribute in the generated payload</description>
    <label>API Property</label>
    <length>50</length>
    <type>Text</type>
</CustomField>