sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <description>Type of data held in the field, to properly generate the payload</description>
    <label>Data Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>