sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Field_Details__c.field-meta.xml
<CustomField>
    <fullName>Field_Details__c</fullName>
    <description>Additional details and context about this entry in the CMT</description>
    <label>Field Details</label>
    <type>TextArea</type>
</CustomField>