sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>API Name of the Salesforce Field</description>
    <label>Field Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>