sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Is_Banking__c.field-meta.xml
<CustomField>
    <fullName>Is_Banking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this is a banking field or not</description>
    <label>Is Banking</label>
    <type>Checkbox</type>
</CustomField>