sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Is_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether this field must be populated in order for the quote to be RESSMO-eligible</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>