sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/JSON_Object__c.field-meta.xml
<CustomField>
    <fullName>JSON_Object__c</fullName>
    <description>JSON Object name under which to create the JSON attribute in the payload</description>
    <label>JSON Object</label>
    <length>30</length>
    <type>Text</type>
</CustomField>