sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API Name of the Salesforce Object</description>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>