sfdx-source/force-app/main/default/objects/RESSMO_Mapping__mdt/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>DD_Custom_Id__c value of the Product2 records for which the entry is relevant and should be added in the payload, at the line level (applicable for Ads &amp; Promos initially)</description>
    <label>Products</label>
    <type>TextArea</type>
</CustomField>